# uniprot_viewer

./: README.md  manage.py  pyproject.toml
uniprot_db/: apps.py  routers.py
uniprot_db/admin/: user.py
uniprot_db/managers/: user.py
uniprot_db/migrations/: 0001_initial.py
uniprot_db/models/: user.py
uniprot_db/serializers/: user.py
uniprot_db/viewsets/: user.py
uniprot_viewer/: asgi.py  settings.py  urls.py  wsgi.py
