[tool.poetry]
name = "uniprot-viewer"
version = "0.1.0"
description = "A simple Django rest framework app to provide API for uniprot dataset"
authors = ["Scott Greig <scottjgreig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
